repoman (1.5.1sg5) unstable; urgency=low

  * A decorator import somehow got left in the client; remove it.

 -- Ian Eure <ian@simplegeo.com>  Wed, 09 Jun 2010 16:26:46 -0700

repoman (1.5.1sg4) unstable; urgency=low

  * Fix installation of conf/static resources.

 -- Ian Eure <ian@simplegeo.com>  Wed, 09 Jun 2010 16:08:58 -0700

repoman (1.5.1sg3) unstable; urgency=low

  * Fix upload code which broke in the refactor.
  * Fix wrong README being included.

 -- Ian Eure <ian@simplegeo.com>  Wed, 09 Jun 2010 11:12:49 -0700

repoman (1.5.1sg2) unstable; urgency=low

  * Improve the help system.
  * Allow promoting packages to multiple dists.

 -- Ian Eure <ian@simplegeo.com>  Tue, 08 Jun 2010 18:53:06 -0700

repoman (1.5.1sg1) unstable; urgency=low

  * Fix a bug in the .changes file parser.
  * Fix a bug in explode_slashes which broke `repoman promote'.

 -- Ian Eure <ian@simplegeo.com>  Tue, 08 Jun 2010 18:27:34 -0700

repoman (1.5.1) unstable; urgency=low

  * Tagging new release with ieure's fixes

 -- Jeremy Grosser <synack@digg.com>  Thu, 03 Jun 2010 10:49:48 -0700

repoman (1.5.0-sg5) unstable; urgency=low

  * Improve error detection and reporting in the client.
  * Merge back into one package.

 -- Ian Eure <ian@simplegeo.com>  Wed, 02 Jun 2010 15:33:33 -0700

repoman (1.5.0-sg4) unstable; urgency=low

  * Fix parsing signed .changes files.
  * Fix creating packs in the current directory.

 -- Ian Eure <ian@simplegeo.com>  Wed, 02 Jun 2010 14:37:33 -0700

repoman (1.5.0-sg3) unstable; urgency=low

  * Remove wrong hard-coded default API_URL, take the default from
    REPOMAN_API_URL environment var.

 -- Ian Eure <ian@simplegeo.com>  Wed, 02 Jun 2010 11:50:43 -0700

repoman (1.5.0-sg2) unstable; urgency=low

  * Fix python-daemon dependency in setup.py

 -- Ian Eure <ian@simplegeo.com>  Wed, 02 Jun 2010 11:35:54 -0700

repoman (1.5.0-sg1) lucid; urgency=low

  * Break Debian package into client and server, fix some lintian
    issues.