@@ -131,14 +131,20 @@ def create_pack(changefile):
     """Return a tuple of (filename, StringIO)."""
     output = StringIO()
 
+    change_dir = os.path.dirname(changefile) or "."
     with open(changefile, 'r') as change:
         (source_pkg, pkg_files) = _parse_changes(change.read())
+
+    dsc_file = [file_ for file_ in pkg_files if file_.endswith(".dsc")][0]
+    with open("%s/%s" % (change_dir, dsc_file), 'r') as dscfile:
+        pkg_files += _parse_changes(dscfile.read())[1]
+
     tarball = tarfile.open("%s.tar.gz" % source_pkg, 'w:gz',
                            fileobj=output)
 
     base_dir = os.path.dirname(changefile) or "."
     tarball.add(changefile, os.path.basename(changefile))
-    for pkg_file in pkg_files:
+    for pkg_file in set(pkg_files):
         tarball.add("%s/%s" % (base_dir, pkg_file), pkg_file)
 
 
